# dark

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.prod  GAP_ANALYSIS.md  Justfile  LICENSE  README.md  SECURITY.md  WORKFLOW.md  config.e2e.toml  config.example.toml  coverage-thresholds.toml  deny.toml  docker-compose.ci.yml  docker-compose.light.yml  docker-compose.prod.yml  docker-compose.yml  prometheus.yml
contrib/memo-vector-gen/: Cargo.toml
contrib/memo-vector-gen/src/: main.rs
contrib/zkp-poc/: Cargo.toml
contrib/zkp-poc/benches/: commit_verify.rs
contrib/zkp-poc/src/: main.rs
crates/ark-cli/: Cargo.toml
crates/ark-cli/src/: balance.rs  confidential.rs  confidential_tx_stub.rs  disclose.rs  history.rs  main.rs  psar.rs  stealth.rs  wallet_config.rs
crates/ark-cli/tests/: psar_cli.rs
crates/arkd-api/: Cargo.toml  build.rs
crates/arkd-api/src/: auth.rs  config.rs  handlers.rs  lib.rs  monitoring.rs  rest.rs  server.rs
crates/arkd-api/tests/: grpc_integration.rs
crates/arkd-client/: Cargo.toml
crates/arkd-client/src/: client.rs  error.rs  explorer.rs  lib.rs  sdk.rs  types.rs  wallet.rs
crates/arkd-db/: Cargo.toml
crates/arkd-db/migrations/: 001_initial.sql  005_assets.sql  006_scheduled_sessions.sql
crates/arkd-db/src/: cache.rs  config.rs  embedded_kv.rs  lib.rs  migrations.rs  pool.rs  pool_postgres.rs  repos.rs
crates/arkd-live-store/: Cargo.toml
crates/arkd-live-store/src/: etcd.rs  lib.rs  memory.rs  redis.rs
crates/arkd-nostr/: Cargo.toml
crates/arkd-nostr/src/: lib.rs  notification_service.rs  notifier.rs  relay.rs  types.rs
crates/arkd-wallet/: Cargo.toml
crates/arkd-wallet/src/: bdk_wallet.rs  config.rs  lib.rs  manager.rs  service.rs  signer.rs
crates/dark-api/: Cargo.toml  build.rs
crates/dark-api/src/: auth.rs  config.rs  handlers.rs  lib.rs  monitoring.rs  notes.rs  rest.rs  server.rs
crates/dark-api/tests/: grpc_integration.rs
crates/dark-bitcoin/: Cargo.toml
crates/dark-bitcoin/benches/: aggregate.rs  partial_sign.rs
crates/dark-bitcoin/src/: bip322.rs  confidential_exit.rs  error.rs  exit.rs  forfeit.rs  lib.rs  rpc.rs  script.rs  signing.rs  tapscript.rs  transaction.rs  tree.rs  tx_builder.rs  tx_decoder.rs
crates/dark-bitcoin/tests/: golden_2of2.rs
crates/dark-client/: Cargo.toml
crates/dark-client/src/: balance.rs  batch.rs  client.rs  confidential.rs  confidential_exit.rs  confidential_tx.rs  error.rs  explorer.rs  history.rs  lib.rs  owned_vtxos.rs  restore.rs  sdk.rs  stealth_scan.rs  store.rs  types.rs  wallet.rs
crates/dark-client/tests/: stealth_scan_grpc.rs
crates/dark-confidential/: Cargo.toml
crates/dark-confidential/benches/: balance_proof.rs  nullifier.rs  range_proof.rs
crates/dark-confidential/src/: balance_proof.rs  commitment.rs  disclosure.rs  errors.rs  exit_script.rs  lib.rs  nullifier.rs  range_proof.rs  stealth.rs  vtxo.rs
crates/dark-confidential/tests/: props.rs
crates/dark-core/: Cargo.toml
crates/dark-core/benches/: confidential_tx_validation.rs  round_tree.rs
crates/dark-core/proptest-regressions/: confidential_tx_validation.txt
crates/dark-core/src/: alerts_manager.rs  application.rs  confidential_tx_validation.rs  confidential_validation.rs  confidential_validation_error.rs  cosigning.rs  fraud_service.rs  lib.rs  metrics.rs  multi_signer.rs  ports.rs  proptest_tests.rs  round_batching.rs  round_loop.rs  round_report.rs  round_scheduler.rs  round_tree.rs  signer.rs  sweep.rs  sweeper.rs  tx_builder_impl.rs  tx_decoder_impl.rs  validation.rs
crates/dark-db/: Cargo.toml
crates/dark-db/migrations/: 001_initial.sql  002_offchain_txs.sql  003_noop_repos.sql  004_signing_combined_sig.sql  007_vtxo_assets.sql  008_confidential_vtxos.sql  008_vtxo_expires_at_block.sql  009_nullifiers.sql
crates/dark-db/src/: cache.rs  config.rs  embedded_kv.rs  lib.rs  migrations.rs  pool.rs  pool_postgres.rs
crates/dark-db/tests/: postgres_e2e.rs
crates/dark-fee-manager/: Cargo.toml
crates/dark-fee-manager/src/: bitcoin_core.rs  confidential.rs  lib.rs  mempool_space.rs  simple.rs  static_fee.rs  weight.rs
crates/dark-fee-manager/tests/: confidential_fee_integration.rs
crates/dark-live-store/: Cargo.toml
crates/dark-live-store/benches/: nullifier_membership.rs
crates/dark-live-store/src/: etcd.rs  lib.rs  memory.rs  nullifier_set.rs  redis.rs
crates/dark-nostr/: Cargo.toml
crates/dark-nostr/src/: crypto.rs  lib.rs  notification_service.rs  notifier.rs  types.rs
crates/dark-psar/: Cargo.toml
crates/dark-psar/benches/: boarding.rs  epoch.rs
crates/dark-psar/src/: adapter.rs  asp_mode.rs  attest.rs  batch_tree.rs  boarding.rs  cohort.rs  epoch.rs  error.rs  lib.rs  message.rs  publish.rs  report.rs  schedule_root.rs  slot_tree.rs  store.rs
crates/dark-psar/tests/: e2e_psar_demo.rs  e2e_psar_regtest.rs
crates/dark-rest-client/: Cargo.toml
crates/dark-rest-client/src/: lib.rs
crates/dark-scanner/: Cargo.toml
crates/dark-scanner/src/: esplora.rs  fraud.rs  lib.rs  noop.rs  sweep.rs
crates/dark-scheduler/: Cargo.toml
crates/dark-scheduler/src/: block_scheduler.rs  lib.rs  time_scheduler.rs
crates/dark-signer/: Cargo.toml
crates/dark-signer/src/: main.rs  service.rs
crates/dark-von/: Cargo.toml
crates/dark-von-musig2/: Cargo.toml
crates/dark-von-musig2/benches/: aggregate.rs  partial_sign.rs
crates/dark-von-musig2/src/: epoch.rs  error.rs  lib.rs  nonces.rs
crates/dark-von-musig2/tests/: bip340_compat.rs
crates/dark-von/benches/: von.rs
crates/dark-von/src/: ecvrf.rs  error.rs  hash.rs  internal.rs  lib.rs  schedule.rs  wrapper.rs
crates/dark-von/tests/: ecvrf_witnet_vectors.rs  wrapper_vectors.rs
crates/dark-wallet/: Cargo.toml
crates/dark-wallet-bin/: Cargo.toml  build.rs
crates/dark-wallet-bin/src/: encryption.rs  grpc_service.rs  main.rs
crates/dark-wallet-rest/: Cargo.toml  openapi.json
crates/dark-wallet-rest/src/: auth.rs  codec.rs  config.rs  dto.rs  error.rs  lib.rs  state.rs
crates/dark-wallet-rest/tests/: openapi_smoke.rs
proto/: buf.yaml
(+271 files in other folders)
