[package]
name = "arkd-rs"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "Rust implementation of arkd - Ark protocol server for Bitcoin Layer 2 scaling"
license = "MIT"
repository = "https://github.com/lobbyclawy/arkd-rs"

[features]
default = []
light = []
profiling = ["pyroscope", "pyroscope_pprofrs", "arkd-api/profiling"]

[workspace]
members = [
    "crates/arkd-core",
    "crates/arkd-wallet",
    "crates/arkd-api",
    "crates/arkd-db",
    "crates/arkd-bitcoin",
    "crates/arkd-live-store",
    "crates/arkd-scanner",
    "crates/arkd-scheduler",
    "crates/arkd-fee-manager",
    "crates/ark-cli",
    "crates/arkd-client",
    "crates/arkd-nostr",
    "crates/arkd-signer",
    "crates/arkd-wallet-bin",
]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Uncomment to enable OpenTelemetry export (issue #245):
# opentelemetry = { version = "0.22", features = ["trace"] }
# opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
# tracing-opentelemetry = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bitcoin (core primitives)
bitcoin = { version = "0.32", features = ["rand", "serde"] }
bitcoincore-rpc = "0.19"
bdk_wallet = { version = "1.0", features = ["keys-bip39"] }  # For wallet service

# Cryptography (already via bitcoin, but explicit for secp256k1)
secp256k1 = { version = "0.29", features = ["rand"] }

# gRPC / API
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"  # For proto compilation

# Database
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "macros"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Internal crates
arkd-api = { path = "crates/arkd-api" }
arkd-core = { path = "crates/arkd-core" }
arkd-nostr = { path = "crates/arkd-nostr" }
arkd-db = { path = "crates/arkd-db" }
arkd-scheduler = { path = "crates/arkd-scheduler" }
arkd-scanner = { path = "crates/arkd-scanner" }
arkd-wallet = { path = "crates/arkd-wallet" }
async-trait = "0.1"

# Profiling (behind `profiling` feature flag)
pyroscope = { version = "0.5", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }

# Utilities
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
arkd-bitcoin = { path = "crates/arkd-bitcoin" }
arkd-client = { path = "crates/arkd-client" }
bitcoin = { version = "0.32", features = ["rand", "serde"] }
secp256k1 = { version = "0.29", features = ["rand"] }
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2"

[[bin]]
name = "arkd"
path = "src/main.rs"

[[bench]]
name = "ark_benchmarks"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e_regtest"
path = "tests/e2e_regtest.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1