[package]
name = "dark"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "Rust implementation of dark - Ark protocol server for Bitcoin Layer 2 scaling"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[features]
default = []
light = []
profiling = ["pyroscope", "pyroscope_pprofrs", "dark-api/profiling"]

[workspace]
members = [
    "crates/dark-core",
    "crates/dark-wallet",
    "crates/dark-api",
    "crates/dark-db",
    "crates/dark-bitcoin",
    "crates/dark-live-store",
    "crates/dark-scanner",
    "crates/dark-scheduler",
    "crates/dark-fee-manager",
    "crates/ark-cli",
    "crates/dark-client",
    "crates/dark-nostr",
    "crates/dark-signer",
    "crates/dark-wallet-bin",
]

# Shared dependency versions. Each member crate inherits via `workspace = true`.
# Per-crate feature sets are declared in each crate's Cargo.toml.
[workspace.dependencies]
# Async runtime
tokio = { version = "1.42" }
tokio-util = "0.7"
tokio-stream = "0.1"
tokio-test = "0.4"
async-stream = "0.3"
async-trait = "0.1"
futures-util = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Bitcoin stack
bitcoin = { version = "0.32", features = ["serde"] }
bitcoincore-rpc = "0.19"
bdk_wallet = { version = "1.2", features = ["keys-bip39"] }
bdk_esplora = { version = "0.20", features = ["async-https", "tokio"] }
musig2 = "0.3.1"
secp256k1 = { version = "0.29", features = ["rand"] }

# gRPC / protobuf
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
tonic-web = "0.12"
prost = "0.13"

# HTTP server / middleware
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Database / cache
sqlx = { version = "0.8", features = ["runtime-tokio", "macros"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sled = "0.34"

# Configuration / CLI
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
hex = "0.4"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
url = "2"
bech32 = "0.11"
once_cell = "1.19"

# Metrics
prometheus = "0.13"

# Nostr / auth / crypto extras
secrecy = { version = "0.8", features = ["serde"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
macaroon = "0.3"
rcgen = "0.13"

# Test utilities
tempfile = "3"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1"

# Profiling (optional)
pyroscope = "0.5"
pyroscope_pprofrs = "0.2"

# Internal crates
dark-api = { path = "crates/dark-api" }
dark-bitcoin = { path = "crates/dark-bitcoin" }
dark-client = { path = "crates/dark-client" }
dark-core = { path = "crates/dark-core" }
dark-db = { path = "crates/dark-db" }
dark-nostr = { path = "crates/dark-nostr" }
dark-scanner = { path = "crates/dark-scanner" }
dark-scheduler = { path = "crates/dark-scheduler" }
dark-wallet = { path = "crates/dark-wallet" }

# Workspace-wide lint floor. Per-crate `[lints]` inherits these via
# `workspace = true`. Pedantic lints chosen below flagged recurring issues in
# code review; the `allow` list is short and each entry is justified.
[workspace.lints.clippy]
# Denied: recurring bug/polish issues that prior review has called out.
needless_pass_by_value = "deny"
unused_async = "deny"
unnecessary_wraps = "deny"
redundant_clone = "deny"
implicit_clone = "deny"
ref_option_ref = "deny"
cloned_instead_of_copied = "deny"
manual_let_else = "deny"
semicolon_if_nothing_returned = "deny"
# Common in hexagonal-architecture crate layouts (e.g. dark_core::Core).
module_name_repetitions = "allow"
# Revisit after milestones M0.1 and M7.3 land; most public APIs are internal
# today and doc-writing will be tackled in a dedicated sweep.
missing_errors_doc = "allow"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Bitcoin (core primitives)
bitcoin = { workspace = true, features = ["rand", "serde"] }
bitcoincore-rpc = { workspace = true }
bdk_wallet = { workspace = true }  # For wallet service

# Cryptography (already via bitcoin, but explicit for secp256k1)
secp256k1 = { workspace = true }

# gRPC / API
tonic = { workspace = true }
prost = { workspace = true }
tonic-build = { workspace = true }  # For proto compilation

# Database
sqlx = { workspace = true, features = ["postgres", "sqlite"] }
redis = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

# Internal crates
dark-api = { workspace = true }
dark-core = { workspace = true }
dark-nostr = { workspace = true }
dark-db = { workspace = true }
dark-scheduler = { workspace = true }
dark-scanner = { workspace = true }
dark-wallet = { workspace = true }
dark-bitcoin = { workspace = true }
async-trait = { workspace = true }

# Profiling (behind `profiling` feature flag)
pyroscope = { workspace = true, optional = true }
pyroscope_pprofrs = { workspace = true, optional = true }

# Utilities
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
dark-bitcoin = { workspace = true }
dark-client = { workspace = true }
bitcoin = { workspace = true, features = ["rand", "serde"] }
secp256k1 = { workspace = true }
musig2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "dark"
path = "src/main.rs"

[[bench]]
name = "ark_benchmarks"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e_regtest"
path = "tests/e2e_regtest.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
