[package]
name = "dark"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "Rust implementation of dark - Ark protocol server for Bitcoin Layer 2 scaling"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[features]
default = []
light = []
profiling = ["pyroscope", "pyroscope_pprofrs", "dark-api/profiling"]
# Bundle the standalone REST wallet daemon (`dark-wallet-rest`) into the same
# workspace build. Does not modify the `dark` binary — enabling this just
# ensures `cargo build --features rest` pulls the crate in from the workspace.
rest = ["dep:dark-wallet-rest"]

[workspace]
members = [
    "crates/dark-core",
    "crates/dark-wallet",
    "crates/dark-api",
    "crates/dark-db",
    "crates/dark-bitcoin",
    "crates/dark-live-store",
    "crates/dark-scanner",
    "crates/dark-scheduler",
    "crates/dark-fee-manager",
    "crates/ark-cli",
    "crates/dark-client",
    "crates/dark-nostr",
    "crates/dark-signer",
    "crates/dark-wallet-bin",
    "crates/dark-wallet-rest",
    "crates/dark-rest-client",
]

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Uncomment to enable OpenTelemetry export (issue #245):
# opentelemetry = { version = "0.22", features = ["trace"] }
# opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic"] }
# tracing-opentelemetry = "0.23"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bitcoin (core primitives)
bitcoin = { version = "0.32", features = ["rand", "serde"] }
bitcoincore-rpc = "0.19"
bdk_wallet = { version = "1.0", features = ["keys-bip39"] }  # For wallet service

# Cryptography (already via bitcoin, but explicit for secp256k1)
secp256k1 = { version = "0.29", features = ["rand"] }

# gRPC / API
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"  # For proto compilation

# Database
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "tls-rustls-ring", "macros"] }
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"

# Internal crates
dark-api = { path = "crates/dark-api" }
dark-core = { path = "crates/dark-core" }
dark-nostr = { path = "crates/dark-nostr" }
dark-db = { path = "crates/dark-db" }
dark-scheduler = { path = "crates/dark-scheduler" }
dark-scanner = { path = "crates/dark-scanner" }
dark-wallet = { path = "crates/dark-wallet" }
dark-bitcoin = { path = "crates/dark-bitcoin" }
dark-wallet-rest = { path = "crates/dark-wallet-rest", optional = true }
async-trait = "0.1"

# Profiling (behind `profiling` feature flag)
pyroscope = { version = "0.5", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }

# Utilities
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
dark-bitcoin = { path = "crates/dark-bitcoin" }
dark-client = { path = "crates/dark-client" }
bitcoin = { version = "0.32", features = ["rand", "serde"] }
secp256k1 = { version = "0.29", features = ["rand"] }
musig2 = "0.3.1"
hex = "0.4"
tokio = { version = "1.42", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"

[[bin]]
name = "dark"
path = "src/main.rs"

[[bench]]
name = "ark_benchmarks"
harness = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "e2e_regtest"
path = "tests/e2e_regtest.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
