[package]
name = "memo-vector-gen"
version = "0.0.0"
edition = "2021"
publish = false
description = "PoC for ADR-0003: generates byte-exact test vectors for the v1 confidential memo format"

# This crate is intentionally outside the main workspace (see [workspace] below).
# It exists to materialise the vectors pinned by docs/adr/0003-confidential-memo-format.md
# without perturbing the main workspace lockfile. It is slated for removal once the
# implementation issue (CV-M2 memo encrypt/decrypt) lands the real test fixtures.

[workspace]

[dependencies]
secp256k1 = { version = "0.29", features = ["rand"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_json = "1.0"

[[bin]]
name = "gen"
path = "src/main.rs"
