[package]
name = "zkp-poc"
version = "0.0.0"
edition = "2021"
publish = false
description = "PoC for ADR-0001: verifies secp256k1-zkp 0.11 coexists with secp256k1 0.29"

# NOTE: this crate is intentionally outside the workspace (see [workspace] below).
# It exists to validate the dependency graph chosen in docs/adr/0001-secp256k1-zkp-integration.md
# without perturbing the main workspace lockfile. It is slated for removal once #523
# lands the real `dark-confidential` crate.

[workspace]

[dependencies]
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
secp256k1-zkp = { version = "0.11", features = ["rand", "global-context"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "smoke"
path = "src/main.rs"

[[bench]]
name = "commit_verify"
harness = false
