[package]
name = "ark-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line client for testing dark interactively"

[[bin]]
name = "ark-cli"
path = "src/main.rs"

[dependencies]
dark-client = { path = "../dark-client" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
