[package]
name = "ark-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line client for testing dark interactively"

[[bin]]
name = "ark-cli"
path = "src/main.rs"

[dependencies]
dark-client = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
