[package]
name = "ark-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line client for testing dark interactively"

[[bin]]
name = "ark-cli"
path = "src/main.rs"

[dependencies]
dark-client = { path = "../dark-client" }
dark-confidential = { path = "../dark-confidential" }
secp256k1 = { version = "0.29", features = ["rand"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
