[package]
name = "arkd-api"
version = "0.1.0"
edition = "2021"
description = "gRPC API layer for arkd-rs"
license = "MIT"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
tonic-web = "0.12"  # For REST/gRPC gateway

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.42", features = ["sync", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Authentication (macaroons)
macaroon = "0.3"

# Internal crates
arkd-core = { path = "../arkd-core" }

[dev-dependencies]
tokio-test = "0.4"
tonic-mock = "0.1"

[build-dependencies]
tonic-build = "0.12"
