[package]
name = "arkd-api"
version = "0.1.0"
edition = "2021"
description = "gRPC API layer for arkd-rs"
license = "MIT"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
tonic-web = "0.12"  # For REST/gRPC gateway

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.42", features = ["sync", "macros"] }
tokio-util = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Authentication (macaroons)
macaroon = "0.3"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }

# Internal crates
arkd-core = { path = "../arkd-core" }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-test = "0.4"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
