[package]
name = "arkd-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client library for arkd-rs"

[dependencies]
arkd-api = { path = "../arkd-api" }
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
prost = "0.12"
thiserror = "1"
