[package]
name = "arkd-db"
version = "0.1.0"
edition = "2021"
description = "Database layer for arkd-rs (PostgreSQL, SQLite, Redis)"
license = "MIT"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["postgres", "sqlite", "runtime-tokio", "macros", "uuid", "chrono"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Async runtime
tokio = { version = "1.42", features = ["sync"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Internal crates
arkd-core = { path = "../arkd-core" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
