[package]
name = "arkd-wallet"
version = "0.1.0"
edition = "2021"
description = "Bitcoin wallet service for arkd-rs (BDK-based)"
license = "MIT"

[dependencies]
# Bitcoin Development Kit
bdk_wallet = { version = "1.0", features = ["keys-bip39"] }
bdk_esplora = { version = "0.19", features = ["async-https"] }
bdk_file_store = "0.17"

# Bitcoin core primitives
bitcoin = { version = "0.32", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["rand"] }

# Async runtime
tokio = { version = "1.42", features = ["sync"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"

# Internal crates
arkd-core = { path = "../arkd-core" }
arkd-bitcoin = { path = "../arkd-bitcoin" }

[dev-dependencies]
tokio-test = "0.4"
