[package]
name = "arkd-wallet"
version = "0.1.0"
edition = "2021"
description = "Bitcoin wallet service for arkd-rs (BDK-based)"
license = "MIT"

[dependencies]
# Bitcoin Development Kit (BDK 1.0+)
# NOTE: Using 1.2 series with matching chain/file_store versions
bdk_wallet = { version = "1.2", features = ["keys-bip39", "file_store"] }
bdk_esplora = { version = "0.20", features = ["async-https", "tokio"] }

# Bitcoin core primitives
bitcoin = { version = "0.32", features = ["serde", "rand"] }
secp256k1 = { version = "0.29", features = ["rand"] }

# Async runtime
tokio = { version = "1.42", features = ["sync"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"

# Internal crates
arkd-core = { path = "../arkd-core" }
arkd-bitcoin = { path = "../arkd-bitcoin" }

[dev-dependencies]
tokio-test = "0.4"
