[package]
name = "dark-api"
version = "0.1.0"
edition = "2021"
description = "gRPC API layer for dark"
license = "MIT"

[dependencies]
# gRPC
tonic = { version = "0.12", features = ["tls"] }
tonic-reflection = "0.12"
prost = "0.13"
tonic-web = "0.12"  # For REST/gRPC gateway

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.42", features = ["sync", "macros", "fs"] }
tokio-util = "0.7"
async-stream = "0.3"
tokio-stream = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Authentication (macaroons)
macaroon = "0.3"
rcgen = "0.13"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }

# Internal crates
dark-core = { path = "../dark-core" }
dark-scheduler = { path = "../dark-scheduler" }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
profiling = []

[dev-dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-test = "0.4"
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
tonic-build = "0.12"
