[package]
name = "dark-api"
version = "0.1.0"
edition = "2021"
description = "gRPC API layer for dark"
license = "MIT"

[dependencies]
# gRPC
tonic = { workspace = true, features = ["tls"] }
tonic-reflection = { workspace = true }
prost = { workspace = true }
tonic-web = { workspace = true }  # For REST/gRPC gateway

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "fs"] }
tokio-util = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Authentication (macaroons)
macaroon = { workspace = true }
rcgen = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# Bitcoin
bitcoin = { workspace = true }

# HTTP client (package broadcast)
reqwest = { workspace = true }

# Internal crates
dark-core = { workspace = true }
dark-scheduler = { workspace = true }
uuid = { workspace = true }

[features]
default = []
profiling = []

[dev-dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = { workspace = true, features = ["net"] }
tokio-test = { workspace = true }
tonic = { workspace = true, features = ["transport"] }

[build-dependencies]
tonic-build = { workspace = true }

[lints]
workspace = true
