[package]
name = "dark-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["sync", "time", "macros"] }
musig2 = "0.3.1"
rand = "0.8"
async-trait = "0.1"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt"] }
tokio-test = "0.4"

[features]
regtest = []
