[package]
name = "dark-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { workspace = true }
bitcoincore-rpc = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
musig2 = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }

[features]
regtest = []

[lints]
workspace = true
