[package]
name = "dark-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client library for dark"

[dependencies]
dark-api = { path = "../dark-api" }
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
prost = "0.12"
thiserror = "1"

# Bitcoin / crypto
bitcoin = { version = "0.32", features = ["serde", "rand"] }
secp256k1 = { version = "0.29", features = ["rand", "rand-std"] }

# HTTP client for Esplora
reqwest = { version = "0.12", features = ["json"] }

# Utilities
hex = "0.4"
