[package]
name = "dark-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client library for dark"

[dependencies]
dark-api = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }

# Bitcoin / crypto
bitcoin = { workspace = true, features = ["rand"] }
secp256k1 = { workspace = true, features = ["rand-std"] }
dark-bitcoin = { workspace = true }
musig2 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

# HTTP client for Esplora
reqwest = { workspace = true }

# Utilities
base64 = { workspace = true }
hex = { workspace = true }
bech32 = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
