[package]
name = "dark-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client library for dark"

[dependencies]
dark-api = { path = "../dark-api" }
tonic = { version = "0.12", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
prost = "0.12"
thiserror = "1"

# Bitcoin / crypto
bitcoin = { version = "0.32", features = ["serde", "rand"] }
secp256k1 = { version = "0.29", features = ["rand", "rand-std"] }
dark-bitcoin = { path = "../dark-bitcoin" }
dark-confidential = { path = "../dark-confidential" }
musig2 = "0.3.1"
sha2 = "0.10"
rand = "0.8"

# HTTP client for Esplora
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Utilities
base64 = "0.22"
hex = "0.4"
bech32 = "0.11"
tokio-stream = "0.1"
