[package]
name = "dark-confidential"
version = "0.1.0"
edition = "2021"
authors = ["Lobby <lobby.clawy@gmail.com>", "Andrea Carotti <ac.carotti@gmail.com>"]
description = "Confidential VTXO primitives and proofs for dark"
license = "MIT"
repository = "https://github.com/lobbyclawy/dark"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
thiserror = "2.0"
secp256k1 = { version = "0.29", features = ["hashes", "rand"] }
hmac = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
secp256k1-zkp = { version = "0.11", features = ["rand", "global-context"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.32", default-features = false, features = ["std"] }

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
rand = { version = "0.8", features = ["small_rng"] }

[lib]
name = "dark_confidential"
path = "src/lib.rs"

[[bench]]
name = "balance_proof"
harness = false

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "pedersen"
harness = false

[[bench]]
name = "nullifier"
harness = false
