[package]
name = "dark-core"
version = "0.1.0"
edition = "2021"
description = "Core domain models and business logic for Ark protocol"
license = "MIT"

[dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.42", features = ["sync", "time", "macros", "rt", "fs"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Bitcoin primitives (re-exported from dark-bitcoin)
bitcoin = { version = "0.32", features = ["serde"] }
secp256k1 = { version = "0.29", features = ["rand", "serde", "rand-std"] }

# Ark Bitcoin utilities (BIP-322, etc.)
dark-bitcoin = { path = "../dark-bitcoin" }

# MuSig2 (BIP-327) for ASP tree cosigning
musig2 = "0.3.1"
rand = "0.8"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"

# HTTP client (Alertmanager integration)
reqwest = { version = "0.12", features = ["json"] }

# Metrics
prometheus = "0.13"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
proptest = "1.5"
