[package]
name = "dark-core"
version = "0.1.0"
edition = "2021"
description = "Core domain models and business logic for Ark protocol"
license = "MIT"

[dependencies]
# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "macros", "rt", "fs"] }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# Bitcoin primitives (re-exported from dark-bitcoin)
bitcoin = { workspace = true }
secp256k1 = { workspace = true, features = ["rand", "serde", "rand-std"] }

# Ark Bitcoin utilities (BIP-322, etc.)
dark-bitcoin = { workspace = true }

# MuSig2 (BIP-327) for ASP tree cosigning
musig2 = { workspace = true }
rand = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# HTTP client (Alertmanager integration)
reqwest = { workspace = true }

# Metrics
prometheus = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
proptest = { workspace = true }

[lints]
workspace = true
