[package]
name = "dark-db"
version = "0.1.0"
edition = "2021"
description = "Database layer for dark (PostgreSQL, SQLite, Redis)"
license = "MIT"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
# Database
sqlx = { workspace = true, features = ["uuid", "chrono"] }

# Cache
redis = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# UUIDs
uuid = { workspace = true, features = ["serde"] }

# Embedded KV (Badger equivalent — issue #243)
sled = { workspace = true }

# Logging
tracing = { workspace = true }

# Bitcoin
bitcoin = { workspace = true }

# Internal crates
dark-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }

[lints]
workspace = true
