[package]
name = "dark-db"
version = "0.1.0"
edition = "2021"
description = "Database layer for dark (PostgreSQL, SQLite, Redis)"
license = "MIT"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring", "macros", "uuid", "chrono"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }

# Async runtime
tokio = { version = "1.42", features = ["sync"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# Embedded KV (Badger equivalent — issue #243)
sled = "0.34"

# Logging
tracing = "0.1"

# Bitcoin
bitcoin = { version = "0.32", features = ["serde"] }

# Internal crates
dark-core = { path = "../dark-core" }
dark-live-store = { path = "../dark-live-store", default-features = false }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
tempfile = "3"
