[package]
name = "dark-fee-manager"
version = "0.1.0"
edition = "2021"
description = "Fee estimation implementations for Ark protocol (static + Bitcoin Core RPC)"
license = "MIT"

[dependencies]
dark-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
