[package]
name = "dark-fee-manager"
version = "0.2.0"
edition = "2021"
description = "Fee estimation implementations for Ark protocol (static + Bitcoin Core RPC)"
license = "MIT"

[dependencies]
dark-core = { path = "../dark-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
