[package]
name = "dark-live-store"
version = "0.1.0"
edition = "2021"
description = "Ephemeral live-store implementations (in-memory + Redis) for dark round state"
license = "MIT"

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]
etcd = ["dep:etcd-client"]

[dependencies]
dark-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
redis = { workspace = true, optional = true }
etcd-client = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
