[package]
name = "dark-live-store"
version = "0.2.0"
edition = "2021"
description = "Ephemeral live-store implementations (in-memory + Redis) for dark round state"
license = "MIT"

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]
etcd = ["dep:etcd-client"]

[dependencies]
dark-core = { path = "../dark-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
hex = "0.4"
redis = { version = "0.25", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"], optional = true }
etcd-client = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"

[[bench]]
name = "nullifier_membership"
harness = false

[[bench]]
name = "vtxo_lookup"
harness = false
